--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,8 +1,8 @@
-{% if site.social-share %}
+<!-- {% if site.social-share %}
   <div class="social-share-wrapper">
     <div class="social-share"></div>
   </div>
-{% endif %}
+{% endif %} -->
 
 <!-- share.js -->
 <script src="/assets/js/social-share.min.js"></script>
