--- a/assets/css/github-markdown.css
+++ b/assets/css/github-markdown.css
@@ -186,7 +186,6 @@
 .markdown-body code,
 .markdown-body kbd,
 .markdown-body pre {
-  /*font-family: monospace, monospace;*/
   font-size: 1em;
 }
 
@@ -404,25 +403,8 @@
 }
 
 .markdown-body code {
-  /*font-family: RobotoMono;*/
-  /*font-family: operatormono;*/
-  /*font-family: 'YaHei Consolas Hybrid';*/
   font-family: Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
   font-size: 28px;
-  /*font-weight: bold;*/
-}
-
-.markdown-body pre {
-  margin-top: 0;
-  margin-bottom: 0;
-  /*font-family: RobotoMono;*/
-  /*font-family: operatormono;*/
-  /*font-family: 'YaHei Consolas Hybrid';*/
-  font-family: 'DankMonoNormal';
-  font-size: 28px;
-  /*font-weight: bold;*/
-  border-radius: 4px;
-  color: #ccc;
 }
 
 .markdown-body .octicon {
@@ -694,31 +676,38 @@
   padding-right: 20px;
 }
 
+.markdown-body pre {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-family: 'DankMonoNormal';
+  border-radius: 4px;
+  color: #ccc;
+}
+
 .markdown-body code {
   padding: 0.2em 0.4em;
   margin: 0;
-  font-size: 85%;
   background-color: rgba(27,31,35,0.05);
   border-radius: 3px;
+  font-size: 0.8em;
 }
 
-.markdown-body pre {
-  word-wrap: normal;
-}
-
-.markdown-body pre>code {
+.markdown-body pre code {
+  display: inline;
+  max-width: auto;
   padding: 0;
   margin: 0;
-  font-size: 0.8em;
-  word-break: normal;
-  white-space: pre;
+  overflow: visible;
+  line-height: inherit;
   background: transparent;
   border: 0;
+  color: inherit !important;
+  word-break: normal;
+  white-space: pre;
 }
 
 .markdown-body :not(pre) code {
   color: #c7254e;
-  font-size: 0.8em;
 }
 
 .markdown-body .highlight {
@@ -734,26 +723,10 @@
 .markdown-body pre {
   padding: 16px;
   overflow: auto;
-  /*font-size: 16px;*/
   font-size: 15px;
   line-height: 1.45;
-  /*背景色改动*/
-  /*background-color: #f6f8fa;*/
-  /*background-color: #fafbfc;*/
   background-color: #2d2d2d;
   border-radius: 3px;
-}
-
-.markdown-body pre code {
-  display: inline;
-  max-width: auto;
-  padding: 0;
-  margin: 0;
-  overflow: visible;
-  line-height: inherit;
-  word-wrap: normal;
-  background-color: transparent;
-  border: 0;
 }
 
 .markdown-body .full-commit .btn-outline:not(:disabled):hover {
