next page title

--- a/_includes/post-title.html
+++ b/_includes/post-title.html
@@ -16,7 +16,7 @@
       <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9A85FF;"><sapn class="main">{{ page.next.title }}</sapn></span></div>
     {% else %}
       <a href="javascript:;" class="btn bounceInLeft animated" onmouseover="showLeft();this.style.color='#9A85FF';" onmouseout="goneLeft();this.style.color='rgba(0,0,0,.2)';"><</a>
-      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9A85FF;"><sapn class="main">没有上一页咯</sapn></span></div>
+      <div id="left-tab" style="display:none;"><span class="left-san"></span><span class="left-main" style="color:#9A85FF;"><sapn class="main">No Previous Page</sapn></span></div>
     {% endif %}
   </div>
   <div class="post-titlearea">
@@ -31,7 +31,7 @@
       <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9A85FF;"><sapn class="main">{{ page.previous.title }}</sapn></span></div>
     {% else %}
       <a href="javascript:;" class="btn bounceInRight self-animated" onmouseover="showRight();this.style.color='#9A85FF';" onmouseout="goneRight();this.style.color='rgba(0,0,0,.2)';">></a>
-      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9A85FF;"><sapn class="main">没有下一页咯</sapn></span></div>
+      <div id="right-tab" style="display:none;"><span class="right-san"></span><span class="right-main" style="color:#9A85FF;"><sapn class="main">No Next Page</sapn></span></div>
     {% endif %}
   </div>
 
