--- a/assets/css/github-markdown.css
+++ b/assets/css/github-markdown.css
@@ -321,9 +321,9 @@
   font-size: 24px;
   font-weight: 600;
   /*text-align: center;*/
-  border-left: 6px solid #ea6323;
-  background-color: #fafbfc;
-  padding: 17px 15px;
+  /*border-left: 6px solid #ea6323;*/
+  /*background-color: #fafbfc;*/
+  /*padding: 17px 15px;*/
   margin: 30px 0 26px;
 }
 .markdown-body h3::after{
