--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -521,19 +521,21 @@ a{
   border: 1px solid #e7eaf1;
 }
 /*滚动条样式*/
-.markdown-body .highlight pre::-webkit-scrollbar {/*滚动条整体样式*/
-    width: 15px;     /*高宽分别对应横竖滚动条的尺寸*/
+/*滚动条整体样式*/
+/*.markdown-body .highlight pre::-webkit-scrollbar {
+    width: 15px;
     height: 15px;
-}
-.markdown-body .highlight pre::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+}*/
+/*滚动条里面小方块*/
+/*.markdown-body .highlight pre::-webkit-scrollbar-thumb {
     border-radius: 0px;
-    /*background: #fafbfc;*/
     background-color: #999;
-}
-.markdown-body .highlight pre::-webkit-scrollbar-track {/*滚动条里面轨道*/
+}*/
+/*滚动条里面轨道*/
+/*.markdown-body .highlight pre::-webkit-scrollbar-track {
     border-radius: 0;
     background: white;
-}
+}*/
 .postpage-subtitle{
   width: 80%;
   height: auto;
